[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.4 patchlevel 5                                 ??? ??,  2012

Commands:
 * @edit/quiet edits attributes, but doesn't spam you with the modified
   values, just gives you a count of modified attributes. Suggested by
   Padraic. [MG]

Powers:
 * can_dark power lets non-wizard players set themselves dark. Suggested by 
   AnneLions. [GM]

Minor Changes:
 * ansi_string has been rewritten to be much faster for non-marked up
   strings, to take up considerably less memory, and has received general
   all-around improvements in speed. Rewrite is in preparation for
   256 color and 24 bit color ansi. [GM]
 * ansi_string no longer optimizes markup. In some pathological cases,
   buffer_len will be hit much earlier than it used to be. Use ansi()
   with wisdom! [GM]
 * @edit no longer shows the full value of attributes which aren't edited,
   it just shows that they are unchanged. Suggested by Minion. [MG]
 * @mail now shows the dbref of the sender for mail from non-players.
   Suggested by Minion. [MG]

Fixes:
 * %$-subs didn't work inside @switch's default case. Patch by Covenent.
 * %0-9 were being overridden when using /inline/localize. Patch by Covenent.
 * You couldn't @chat on open channels. Reported by Padraic. [MG]
 * Win32 compile fixes by Daniel Powell. [MG]
 * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
 * regrab*() functions removed ansi. Reported by Covenent. [MG]
 * munge() didn't play nice with ansi. [MG]

Functions:
 * Restrictions for the beep() function can now be modified with @function.
   Suggested by Paige. [MG]

Version 1.8.4 patchlevel 4                                 May 05,  2011

Major changes:
 * Q-registers are no longer limited to single characters. setq(name,joe)
   and r(name) or %q<name>! Limited by max_named_qregs. [GM]