@@ -476,7 +476,18 @@ COMMAND(cmd_force)
       queue_type |= QUEUE_PRESERVE_QREG;
   }
 
-  do_force(executor, caller, arg_left, arg_right, queue_type, queue_entry);
+  if (SW_ISSET(sw, SWITCH_NOEVAL)) {
+    char force_cmd[BUFFER_LEN];
+    char const *sp = arg_right;
+    char *bp = force_cmd;
+    process_expression(force_cmd, &bp, &sp,
+                       executor, caller, enactor,
+                       PE_COMMAND_BRACES, PT_DEFAULT, NULL);
+    *bp++ = '\0';
+    do_force(executor, caller, arg_left, force_cmd, queue_type, queue_entry);
+  } else {
+    do_force(executor, caller, arg_left, arg_right, queue_type, queue_entry);
+  }
 }
 
 COMMAND(cmd_function)
